fixed alignment of text

--- a/src/Home.css
+++ b/src/Home.css
@@ -26,6 +26,7 @@
 
 .Home-text p{
   font-size: 1.1em;
+  text-align: center;
 }
 
 /** Home Image **/
